Update extension description and enhance README with logo and features

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Quoty",
     "version": "1.0",
-    "description": "Replaces ChatGPT header with random quotes",
+    "description": "Spice up your ChatGPT with quotes",
     "permissions": [
         "activeTab"
     ],
